add symfony validator add Calculate Price Action
